crates/ink/tests/ui/trait_def/fail/message_output_non_codec.rs
pub struct NonCodec;

#[ink::trait_definition]
pub trait TraitDefinition {
    #[ink(message)]
    fn message(&self) -> NonCodec;
}

fn main() {}
