crates/ink/tests/ui/trait_def/fail/message_output_non_codec.stderr
error[E0277]: the trait bound `NonCodec: WrapperTypeEncode` is not satisfied
 --> tests/ui/trait_def/fail/message_output_non_codec.rs:6:26
  |
6 |     fn message(&self) -> NonCodec;
  |                          ^^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `NonCodec`
  |
  = help: the following other types implement trait `WrapperTypeEncode`:
            Box<T>
            bytes::bytes::Bytes
            Cow<'a, T>
            ink::parity_scale_codec::Ref<'a, T, U>
            sp_core::Bytes
            Rc<T>
            Arc<T>
            Vec<T>
          and $N others
  = note: required for `NonCodec` to implement `Encode`
note: required by a bound in `DispatchOutput`
 --> src/codegen/dispatch/type_check.rs
  |
  | pub struct DispatchOutput<T>(T)
  |            -------------- required by a bound in this struct
  | where
  |     T: scale::Encode + 'static;
  |        ^^^^^^^^^^^^^ required by this bound in `DispatchOutput`

error[E0599]: the method `try_invoke` exists for struct `CallBuilder<E, Set<Call<E>>, Set<ExecutionInput<ArgumentList<ArgumentListEnd, ArgumentListEnd>>>, Set<ReturnType<NonCodec>>>`, but its trait bounds were not satisfied
 --> tests/ui/trait_def/fail/message_output_non_codec.rs:5:5
  |
1 | pub struct NonCodec;
  | ------------------- doesn't satisfy `NonCodec: ink::parity_scale_codec::Decode`
...
5 |     #[ink(message)]
  |     ^ method cannot be called due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `NonCodec: ink::parity_scale_codec::Decode`
note: the trait `ink::parity_scale_codec::Decode` must be implemented
 --> $CARGO/parity-scale-codec-3.6.5/src/codec.rs
  |
  | pub trait Decode: Sized {
  | ^^^^^^^^^^^^^^^^^^^^^^^
